feat: add sections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
+      "~/components/*": ["./src/app/_components/*"],
+      "~/lib/*": ["./src/app/_lib/*"],
       "~/*": ["./src/*"]
     }
   },
