--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.29.1",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -26,9 +29,12 @@
     "geist": "^1.2.2",
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
+    "next-sanity": "^7.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.29.1",
     "server-only": "^0.0.1",
+    "styled-components": "^6.1.8",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
