--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/client": "^6.14.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/overlays": "^2.3.17",
+    "@sanity/react-loader": "^1.8.5",
     "@sanity/vision": "^3.29.1",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -27,11 +31,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "geist": "^1.2.2",
+    "googleapis": "^135.0.0",
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
     "next-sanity": "^7.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "sanity": "^3.29.1",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.8",
@@ -41,6 +47,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
