--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "^10.43.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "geist": "^1.2.2",
     "googleapis": "^135.0.0",
     "lucide-react": "^0.331.0",
