--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/font": "^14.2.3",
+    "@next/mdx": "^14.2.3",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@sanity/client": "^6.14.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "^2.3.17",
@@ -30,6 +36,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,6 +45,7 @@
     "lint-staged": "^15.2.2",
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
+    "next-mdx-remote": "^5.0.0",
     "next-sanity": "^7.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
