--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "eslint-config-prettier": "^9.1.0",
     "geist": "^1.2.2",
     "googleapis": "^135.0.0",
